--- a/index2.html
+++ b/index2.html
@@ -16,7 +16,7 @@
           Wow this is cool!
         </a>
         <a class="cldd bod" href="#" id="dfsdf">
-          devam
+          devam edelim
         </a>
       </span>
     </div>
